fix: change mobile description alignment from center to left

--- a/src/pages/MyMoviesPage.module.css
+++ b/src/pages/MyMoviesPage.module.css
@@ -1142,7 +1142,7 @@
   }
   .detailsDescriptionSection {
     padding: 0 16px 15px 16px;
-    text-align: center;
+    text-align: left;
   }
 }
 
